src/test/deca/context/valid/created/selection-this-not-implicit.deca
class A {
	int a;
	void fonction(int a){
		this.a = a;
	}
}
