src/test/deca/context/invalid/created/void2.deca
class A{
	void fonction(){
		return void;
	}
}